--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:frontend": "env-cmd --no-override yarn workspace frontend start",
     "start:backend": "env-cmd --no-override yarn workspace backend start",
     "test": "jest",
+    "lint": "lint-staged",
     "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
   },
   "devDependencies": {
@@ -20,18 +21,16 @@
     "env-cmd": "^10.1.0",
     "husky": "^4.3.0",
     "jest": "^26.5.3",
+    "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
     "ts-jest": "^26.4.1"
   },
-  "dependencies": {
-    "autoprefixer": "9.8.6"
-  },
   "husky": {
     "hooks": {
-      "pre-commit": [
-        "pretty-quick --staged",
-        "yarn test"
-      ]
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
