--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsnd --respawn src/index.ts"
+    "start": "tsnd --respawn src/index.ts",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.16",
