Fix default format selection
Improve connection interruption code

--- a/shared/package.json
+++ b/shared/package.json
@@ -2,5 +2,12 @@
   "name": "shared",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "lodash": "^4.17.20",
+    "lodash-es": "^4.17.15"
+  },
+  "devDependencies": {
+    "@types/lodash-es": "^4.17.3"
+  }
 }
