--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsnd --respawn src/index.ts",
+    "dev:ws": "tsnd --respawn src/index.ts",
+    "start:ws": "tsnd src/index.ts",
+    "serve": "cross-env-shell \"http-server -p $HTTP_PORT dl\"",
+    "dev": "concurrently \"npm run dev:ws\" \"npm run serve\"",
+    "start": "concurrently \"npm run start:ws\" \"npm run serve\"",
     "build": "tsc"
   },
   "devDependencies": {
@@ -13,8 +17,10 @@
     "@types/ws": "^7.2.7",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
+    "concurrently": "^5.3.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
+    "http-server": "^0.12.3",
     "ts-node-dev": "^1.0.0-pre.63",
     "typed-emitter": "^1.3.1",
     "typescript": "^4.0.3"
