--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,6 +5,7 @@
     "jsx": "preserve",
     "baseUrl": "./",
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     /* paths - If you configure Snowpack import aliases, add them here. */
     "paths": {},
     /* noEmit - Snowpack builds (emits) files, not tsc. */
