--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "autoprefixer": "9.8.6",
     "lib": "1.0.0",
-    "lodash-es": "^4.17.15",
+    "lodash": "^4.17.20",
     "parcel": "^2.0.0-beta.1",
     "react": "^16.13.1",
     "react-delta": "^1.1.0",
@@ -21,7 +21,6 @@
     "shared": "1.0.0"
   },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.3",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "cross-env": "^7.0.2",
