--- a/shared/package.json
+++ b/shared/package.json
@@ -4,10 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.20",
-    "lodash-es": "^4.17.15"
+    "lodash": "^4.17.20"
   },
-  "devDependencies": {
-    "@types/lodash-es": "^4.17.3"
-  }
+  "devDependencies": {}
 }
